# cv_examples

./: .gitignore  README.md  pyproject.toml
cards/: suits_recognition.py
