[project]
name = "cv_examples"
version = "0.1.0"
description = "Examples of some self made CV algorithms."
authors = [
    {name = "Konstantin Sebrovskiy", email = "sebrovskiy.k@gmail.com"},
]
dependencies = [
    "opencv-python>=4.8.1.78",
    "pycvutils>=0.1.2",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
